--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,5 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:id="@+id/gps" />
+        android:id="@+id/gps"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
