--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,8 +16,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/GFA_gps"
+        android:layout_marginTop="54dp"
+        android:layout_below="@+id/gps"
+        android:layout_alignParentStart="true"
+        tools:text="@string/gps_coord" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
         android:id="@+id/gps"
+        tools:text="@string/gps_coord"
+        android:layout_marginTop="23dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
