--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -24,4 +24,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/location_address_view"
+        android:layout_below="@+id/gps"
+        android:layout_toEndOf="@+id/gps"
+        tools:text="@string/address_found" />
+
 </RelativeLayout>
