--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,21 +3,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_stats"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Stats" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_mapview"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Map View" />
     </group>
 
     <item android:title="Communicate">
@@ -27,9 +19,9 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_savecanvas"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Save Canvas" />
         </menu>
     </item>
 
