--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--
-    TODO: Before you run your application, you need a Google Maps API key.
+
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
@@ -16,6 +16,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        "AIzaSyD_jW92wCj8IhztYXZWv1XVKx7PIPUI4LE"
+        AIzaSyD_jW92wCj8IhztYXZWv1XVKx7PIPUI4LE
     </string>
 </resources>
