--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -48,6 +48,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="Total Distance:" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="Most Visited:" />
+
         </LinearLayout>
 
     </LinearLayout>
