--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -4,6 +4,6 @@
         android:angle="135"
         android:centerColor="#4CAF50"
         android:endColor="#2E7D32"
-        android:startColor="#8142351554"
+        android:startColor="#81CAF0"
         android:type="linear" />
 </shape>
