the imageView in stats Activity can grab pictures from your gallery, but it does not save it.

--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -30,7 +30,8 @@
             android:id="@+id/imageView2"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            app:srcCompat="@android:drawable/ic_input_add"
+            android:onClick="loadImagefromGallery"/>
 
         <LinearLayout
             android:layout_width="match_parent"
