--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -14,7 +14,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Test"
+        android:text="Save"
         android:id="@+id/testButton"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="70px"/>
