--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -39,7 +39,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/usernameStats"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="Name:" />
