--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -20,11 +20,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:orientation="horizontal"
         android:weightSum="1"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -45,13 +45,13 @@
                 android:text="Name:" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/tdistanceStats"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="Total Distance:" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/mostFreqStats"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:text="Most Visited:" />
