Added buttons to Trace Canvas, clear button works.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,7 +17,7 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Trace" />
             <item
                 android:id="@+id/nav_savecanvas"
                 android:icon="@drawable/ic_menu_send"
